--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular/animations": "~10.0.5",
+    "@angular/cdk": "^16.2.10",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
     "@angular/core": "~10.0.5",
